--- a/Challenge_1/package.json
+++ b/Challenge_1/package.json
@@ -4,7 +4,8 @@
   "description": "coding test for the Backend Developer role.",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.js"
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Mohamed Ramadan",
